@@ -51,6 +51,7 @@ Copyright_License {
 #include "FLARM/FlarmDetails.hpp"
 #include "FLARM/Record.hpp"
 #include "Weather/Features.hpp"
+#include "FLARM/List.hpp"
 
 #ifdef HAVE_NOAA
 #include "Renderer/NOAAListRenderer.hpp"
@@ -93,7 +94,8 @@ namespace MapItemListRenderer
             const AirspaceRendererSettings &airspace_settings);
 
   void Draw(Canvas &canvas, const PixelRect rc, const TrafficMapItem &item,
-            const DialogLook &dialog_look, const TrafficLook &traffic_look);
+            const DialogLook &dialog_look, const TrafficLook &traffic_look,
+            const TrafficList *traffic_list);
 
   void Draw(Canvas &canvas, const PixelRect rc, const ThermalMapItem &item,
             const DialogLook &dialog_look, const MapLook &look);
@@ -450,17 +452,19 @@ void
 MapItemListRenderer::Draw(Canvas &canvas, const PixelRect rc,
                           const TrafficMapItem &item,
                           const DialogLook &dialog_look,
-                          const TrafficLook &traffic_look)
+                          const TrafficLook &traffic_look,
+                          const TrafficList *traffic_list)
 {
   const PixelScalar line_height = rc.bottom - rc.top;
-  const FlarmTraffic traffic = item.traffic;
+  const FlarmTraffic *traffic = traffic_list == NULL ? NULL :
+      traffic_list->FindTraffic(item.id);
 
   // Now render the text information
   const Font &name_font = *dialog_look.list.font;
   const Font &small_font = *dialog_look.small_font;
   PixelScalar left = rc.left + line_height + Layout::FastScale(2);
 
-  const FlarmRecord *record = FlarmDetails::LookupRecord(item.traffic.id);
+  const FlarmRecord *record = FlarmDetails::LookupRecord(item.id);
 
   StaticString<256> title_string;
   if (record && !StringIsEmpty(record->pilot))
@@ -469,9 +473,10 @@ MapItemListRenderer::Draw(Canvas &canvas, const PixelRect rc,
     title_string = _("FLARM Traffic");
 
   // Append name to the title, if it exists
-  if (traffic.HasName()) {
+  const TCHAR *callsign = FlarmDetails::LookupCallsign(item.id);
+  if (callsign != NULL && !StringIsEmpty(callsign)) {
     title_string.append(_T(", "));
-    title_string.append(traffic.name);
+    title_string.append(callsign);
   }
 
   canvas.Select(name_font);
@@ -480,19 +485,23 @@ MapItemListRenderer::Draw(Canvas &canvas, const PixelRect rc,
   StaticString<256> info_string;
   if (record && !StringIsEmpty(record->plane_type))
     info_string = record->plane_type;
+  else if (traffic != NULL)
+    info_string = FlarmTraffic::GetTypeString(traffic->type);
   else
-    info_string = FlarmTraffic::GetTypeString(item.traffic.type);
+    info_string = _("Unknown");
 
   // Generate the line of info about the target, if it's available
-  if (traffic.altitude_available) {
-    TCHAR tmp[15];
-    FormatUserAltitude(traffic.altitude, tmp, 15);
-    info_string.AppendFormat(_T(", %s: %s"), _("Altitude"), tmp);
-  }
-  if (traffic.climb_rate_avg30s_available) {
-    TCHAR tmp[15];
-    FormatUserVerticalSpeed(traffic.climb_rate_avg30s, tmp, 15);
-    info_string.AppendFormat(_T(", %s: %s"), _("Vario"), tmp);
+  if (traffic != NULL) {
+    if (traffic->altitude_available) {
+      TCHAR tmp[15];
+      FormatUserAltitude(traffic->altitude, tmp, 15);
+      info_string.AppendFormat(_T(", %s: %s"), _("Altitude"), tmp);
+    }
+    if (traffic->climb_rate_avg30s_available) {
+      TCHAR tmp[15];
+      FormatUserVerticalSpeed(traffic->climb_rate_avg30s, tmp, 15);
+      info_string.AppendFormat(_T(", %s: %s"), _("Vario"), tmp);
+    }
   }
   canvas.Select(small_font);
   canvas.text_clipped(left,
@@ -503,8 +512,9 @@ MapItemListRenderer::Draw(Canvas &canvas, const PixelRect rc,
                      (PixelScalar)(rc.top + line_height / 2) };
 
   // Render the representation of the traffic icon
-  TrafficRenderer::Draw(canvas, traffic_look, traffic, traffic.track,
-                        item.color, pt);
+  if (traffic != NULL)
+    TrafficRenderer::Draw(canvas, traffic_look, *traffic, traffic->track,
+                          item.color, pt);
 }
 
 void
@@ -513,7 +523,8 @@ MapItemListRenderer::Draw(Canvas &canvas, const PixelRect rc,
                           const DialogLook &dialog_look, const MapLook &look,
                           const TrafficLook &traffic_look,
                           const FinalGlideBarLook &final_glide_look,
-                          const MapSettings &settings)
+                          const MapSettings &settings,
+                          const TrafficList *traffic_list)
 {
   switch (item.type) {
   case MapItem::LOCATION:
@@ -553,7 +564,8 @@ MapItemListRenderer::Draw(Canvas &canvas, const PixelRect rc,
 #endif
 
   case MapItem::TRAFFIC:
-    Draw(canvas, rc, (const TrafficMapItem &)item, dialog_look, traffic_look);
+    Draw(canvas, rc, (const TrafficMapItem &)item,
+         dialog_look, traffic_look, traffic_list);
     break;
   case MapItem::THERMAL:
     Draw(canvas, rc, (const ThermalMapItem &)item, dialog_look, look);
