@@ -29,6 +29,7 @@ Version 6.4.1 - not yet released
 * user interface
   - remove duplicate "trail drift" setting (#2252)
   - fix flarm teamcolor saving (#2291)
+  - fix flarm targets in map item list (#2267)
 * logger
   - IGC B record is invalid ("V") with just 2D fix
   - log pressure altitude in IGC files
